--- a/docs/_includes/footer/footer-LA.html
+++ b/docs/_includes/footer/footer-LA.html
@@ -7,7 +7,7 @@
                 </picture>
             </div>
             <div class="col-5-small-1">
-                <h2 class="h4-like" id="idTitreFooter1" role="heading">Recevez nos infos par mail</h2>
+                <h2 class="h4-like" id="idTitreFooter1">Recevez nos infos par mail</h2>
                 <p class="ds44-mb-std ds44-mobile-reduced-mb">Pour être alerté lors de la parution des magazines ou recevoir l’actu selon mes centres d’intérêts</p>
                 <p>
                     <button class="ds44-btnStd ds44-mobile-extra-mb" type="button" title="Je m'abonne par mail aux informations du CD44">
