--- a/docs/_includes/footer/footer-MDPH.html
+++ b/docs/_includes/footer/footer-MDPH.html
@@ -19,7 +19,7 @@
                 </p>
             </div>
             <div class="col-4-small-1 ds44-mb3">
-                <h2 class="h4-like" id="idTitreFooter2" role="heading">Recevez nos infos par mail</h2>
+                <h2 class="h4-like" id="idTitreFooter2">Recevez nos infos par mail</h2>
                 <p class="ds44-mb-std ds44-mobile-reduced-mb">Pour être alerté lors de la publication d'une nouvelle actualité.</p>
                 <button class="ds44-btnStd ds44-mobile-extra-mb" type="button" title="Je m'abonne par mail aux informations de la MDPH - Maison départementale des personnes handicapées de Loire Atlantique">
                     <span class="ds44-btnInnerText">Je m'abonne</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i>
