--- a/docs/_includes/footer/footer-archive.html
+++ b/docs/_includes/footer/footer-archive.html
@@ -7,7 +7,7 @@
                 </picture>
             </div>
             <div class="col-4-small-1 ds44-mb3">
-                <h2 class="h4-like" id="idTitreFooter1" role="heading">Les Archives départementales</h2>
+                <h2 class="h4-like" id="idTitreFooter1">Les Archives départementales</h2>
                 <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>6 rue de Bouillé<br />CS 23505, 44035 Nantes cedex 1</p>
                 <p class="ds44-docListElem mtm"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 51 72 93 20</p>
                 <p class="ds44-docListElem mtm">
@@ -19,7 +19,7 @@
                 <p class="ds44-docListElem mtm"><i class="icon icon-time ds44-docListIco" aria-hidden="true"></i>Fermé - ouvre jeudi à 9h</p>
             </div>
             <div class="col-3-small-1 ds44-mb3">
-                <h2 class="h4-like" id="idTitreFooter2" role="heading">Recevez nos infos</h2>
+                <h2 class="h4-like" id="idTitreFooter2">Recevez nos infos</h2>
                 <p class="ds44-mb-std ds44-mobile-reduced-mb">Pour recevoir nos poublications et nos actualités</p>
                 <button class="ds44-btnStd ds44-mobile-reduced-mb" type="button" title="Je m'abonne par mail aux informations des Archives départementales">
                     <span class="ds44-btnInnerText">Je m'abonne</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i>
