--- a/docs/_includes/footer/footer-chateauClisson.html
+++ b/docs/_includes/footer/footer-chateauClisson.html
@@ -7,7 +7,7 @@
                 </picture>
             </div>
             <div class="col-5-small-1">
-                <h2 class="h4-like" id="idTitreFooter1" role="heading">Château de Clisson</h2>
+                <h2 class="h4-like" id="idTitreFooter1">Château de Clisson</h2>
                 <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>Rue du Château<br />44190 Clisson</p>
                 <p class="ds44-docListElem mtm"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 40 54 02 22</p>
                 <p class="ds44-docListElem mtm">
