--- a/docs/_includes/boxes/inc-box-alert.html
+++ b/docs/_includes/boxes/inc-box-alert.html
@@ -3,9 +3,9 @@
         <div class="ds44-collapser_element">
             <p role="heading" aria-level="1">
                 <button type="button" class="ds44-collapser_button">
-                    <h1 class="ds44-card__title">
+                    <p class="ds44-card__title">
                         <i class="icon icon-attention" aria-hidden="true"></i>{{ include.title }}
-                    </h1>
+                    </p>
                     <i class="icon icon-down icon--sizeXL" aria-hidden="true"></i>
                 </button>
             </p>
