--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -26,6 +26,13 @@
     .wysiwyg ol > li > * {
         display: inline-block;
     }
+    .wysiwyg ~ .ds44-box {
+        margin-bottom: $ds44-components-vmargin ;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+    }
 }
 
 blockquote {
