--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -26,7 +26,7 @@
     .wysiwyg ol > li > * {
         display: inline-block;
     }
-    .wysiwyg .ds44-box + .ds44-box {
+    .wysiwyg > div > .ds44-box {
         margin-bottom: $ds44-components-vmargin ;
 
         &:last-child {
