--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -808,6 +808,13 @@
     background-repeat: repeat-x;
 }
 
+.ds44-bg-patrimoine-sites {
+    background-image: url(../../../assets/images/backgrounds/bkgd-triangle-right-white.svg);
+    background-repeat: no-repeat;
+    background-size: 470px;
+    background-position: bottom right;
+}
+
 
 // Background positions
 .ds44-bg-br {
