Suite sites patrimoines

--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -227,6 +227,17 @@
     }
 }
 
+.ds44-bgDark {
+
+  .swipper-carousel-wrap {
+
+      .swiper-button-next,
+      .swiper-button-prev {
+          color: #ffffff;
+        }
+      }
+}
+
 .ds44-ssTitreH1_home {
     font-size: 3.4rem;
 
