--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -95,7 +95,7 @@ h2, .h2-like {
   }
 
   &.ds44-dark {
-    background: linear-gradient(to bottom, $ds44-contextual-color 55%, rgba(0, 0, 0, 1) 55% )!important;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 55%, $ds44-contextual-color 55% )!important;
   }
 
   &--light {
