--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -29,6 +29,13 @@
     .wysiwyg > div > .ds44-box {
         margin-bottom: $ds44-components-vmargin ;
     }
+
+}
+
+.wysiwyg {
+    .icon {
+      margin-right: 5px;
+    }
 }
 
 blockquote {
