RS-820 suite et fin

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -809,10 +809,9 @@
 }
 
 .ds44-bg-patrimoine-sites {
-    background-image: url(../../../assets/images/backgrounds/bkgd-triangle-right-white.svg);
+    background-image: url(../../../assets/images/backgrounds/bkgd-circle-light-grey-patrimoine.png);
     background-repeat: no-repeat;
-    background-size: 470px;
-    background-position: bottom right;
+    background-position: bottom -70px right -70px;
 }
 
 
