--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -152,7 +152,7 @@ a > .ds44-btn--contextual,
 
 .ds44-bgDark {
 
-    .ds44-btnStd, .ds44-btnStd--large {
+    .ds44-btnStd--white {
           color: $ds44-light;
           border-color: $ds44-light;
 
