--- a/docs/_includes/composants-transverses/sites-applis-patrimoine-noModal.html
+++ b/docs/_includes/composants-transverses/sites-applis-patrimoine-noModal.html
@@ -11,6 +11,6 @@
     </div>
 
     <div class="txtcenter ds44-container-large ">
-      <button class="ds44-btnStd ds44-btnStd--large ds44-btnFullMobile" type="button" data-target="#overlay-sites-applis" data-js="ds44-modal"><span class="ds44-btnInnerText">Plus de sites encore...</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
+      <button class="ds44-btnStd ds44-btnStd--white ds44-btnStd--large ds44-btnFullMobile" type="button" data-target="#overlay-sites-applis" data-js="ds44-modal"><span class="ds44-btnInnerText">Plus de sites encore...</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
     </div>
 </section>
