--- a/docs/_includes/card/card--mosaiques.html
+++ b/docs/_includes/card/card--mosaiques.html
@@ -1,11 +1,11 @@
-<div class="grid-12-small-1 ds44-tuiles-mosaiques has-gutter-l">
+<div class="grid-12-small-1 ds44-tuiles-mosaiques has-gutter-l" >
     <div class="col-7-small-1 ds44-mb2 ">
-        <section class="ds44-card ds44-js-card ds44-card--verticalPicture">
-            <picture class="ds44-container-imgRatio">
-                <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
+        <section class="ds44-card ds44-js-card ds44-card--verticalPicture ds44-posRel">
+            <picture class="">
+                <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class=""/>
             </picture>
             <div class="ds44-card__section">
-                <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Ceci est le titre de la tuile</a> </p>
+                <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">La guerre de succession de Bretagne (1341-1365)</a> </p>
                 <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
             </div>
         </section>
@@ -18,7 +18,7 @@
                         <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
                     </picture>
                     <div class="ds44-card__section">
-                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Ceci est le titre de la tuile</a> </p>
+                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Les Bretons et les Francs du 5 au 8e siècle</a> </p>
                         <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
                     </div>
                 </section>
@@ -29,14 +29,14 @@
                         <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
                     </picture>
                     <div class="ds44-card__section">
-                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Ceci est le titre de la tuile</a> </p>
+                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Autour de l'an mil : luttes de pouvoir de grandes maisons</a> </p>
                         <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
                     </div>
                 </section>
             </div>
         </div>
     </div>
-    <div class="col-2-small-1">
+    <div class="col-2-small-1  ">
         <div class="ds44-flex-container ds44-flex-container--column ds44-h100">
             <div class="ds44-fl1 ds44-mb2">
                 <section class="ds44-card ds44-js-card ds44-card--verticalPicture">
@@ -44,7 +44,7 @@
                         <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
                     </picture>
                     <div class="ds44-card__section">
-                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Ceci est le titre de la tuile</a> </p>
+                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">L'union à la France (1491-1570)</a> </p>
                         <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
                     </div>
                 </section>
@@ -55,7 +55,7 @@
                         <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
                     </picture>
                     <div class="ds44-card__section">
-                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Ceci est le titre de la tuile</a> </p>
+                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">L'expansion du commerce colonial atlantique (1700-1790)</a> </p>
                         <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
                     </div>
                 </section>
@@ -66,7 +66,7 @@
                         <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
                     </picture>
                     <div class="ds44-card__section">
-                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Ceci est le titre de la tuile</a> </p>
+                        <p role="heading" aria-level="2" class="ds44-card__title"><a href="#" class="ds44-card__globalLink">Pierre de Dreux et ses successeurs</a> </p>
                         <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
                     </div>
                 </section>
