App PSN : MAJ html / css
à la demande de JR

--- a/framework/scss/apps/_pont.scss
+++ b/framework/scss/apps/_pont.scss
@@ -198,34 +198,30 @@
 */
 
 #debug{
-	position: relative;
+	position: absolute;
 	z-index: 5;
 }
 
-#map-container {
-  //position: fixed;
-  position: relative;
+#map-container{
+  position: fixed;
   z-index: 0;
   height: 100%;
   width: 100%;
   overflow: hidden;
 }
-#map-container svg {
-	/*position: absolute;
-	top: 50%;
-	transform: translate(-50%, -50%);*/
-	position: relative;
-	top: 0;
-	transform: translate(-50%, 0);
+#map-container svg{
 	height: 100%;
 	width: auto;
+	position: absolute;
+	top: 50%;
 	left: 50%;
+	transform: translate(-50%, -50%);
 }
 /* masquage par defaut */
 #map-container svg{
-	#voie1, #voie1-seule, #voie1-travaux, #voie1-particulier,
-	#voie2n, #voie2n-seule, #voie2s, #voie2s-seule, #voie2-travaux, #voie2-particulier,
-	#voie3, #voie3-seule, #voie3-travaux, #voie3-particulier,
+	#voie1, #voie1-seule, #voie1-travaux,
+	#voie2n, #voie2n-seule, #voie2s, #voie2s-seule, #voie2-travaux,
+	#voie3, #voie3-seule, #voie3-travaux,
 	#pointilles1, #pointilles2,
 	#echangeur-sud-voie1-fleche, #echangeur-sud-voie1-croix,
 	#echangeur-sud-voie2-fleche, #echangeur-sud-voie2-croix,
@@ -235,11 +231,11 @@
 	#echangeur-nord-voie3-fleche, #echangeur-nord-voie3-croix,
 	#traficolor-nord g[id*=trafic-vert], #traficolor-nord g[id*=trafic-orange], #traficolor-nord g[id*=trafic-rouge],
 	#traficolor-sud g[id*=trafic-vert], #traficolor-sud g[id*=trafic-orange], #traficolor-sud g[id*=trafic-rouge],
-	#perturbation-vent, #perturbation-nord-ouest, #perturbation-nord-est, #perturbation-sud-ouest, #perturbation-sud-est, #perturbation-a, #perturbation-b, #perturbation-c, #perturbation-d, #perturbation-e
+	#perturbation-vent, #perturbation-nord-ouest, #perturbation-nord-est, #perturbation-sud-est, #perturbation-sud-ouest, #perturbation-a, #perturbation-b, #perturbation-c, #perturbation-d, #perturbation-e
 	{
 	  display: none;
 	}
-	#perturbation-vent, #perturbation-nord-ouest, #perturbation-nord-est, #perturbation-sud-ouest, #perturbation-sud-est, #perturbation-a, #perturbation-b, #perturbation-c, #perturbation-d, #perturbation-e{
+	#perturbation-vent, #perturbation-nord-ouest, #perturbation-nord-est, #perturbation-sud-est, #perturbation-sud-ouest, #perturbation-a, #perturbation-b, #perturbation-c, #perturbation-d, #perturbation-e{
 		g[id*=panne], g[id*=accident], g[id*=deviation]{
 			display: none;
 		}
@@ -256,27 +252,12 @@ $ModesCirculation102: 'm102', 'me102a', 'me102ab', 'me102b', 'me102bc', 'me102c'
 $ModesCirculation112: 'm112', 'me112a', 'me112ab', 'me112b', 'me112bc', 'me112c', 'me112cd', 'me112d', 'me112de', 'me112e','mu112n','mu112s';
 $ModesCirculation120: 'm120', 'mu120';
 $ModesCirculation122: 'm122', 'me122a', 'me122ab', 'me122b', 'me122bc', 'me122c', 'me122cd', 'me122d', 'me122de', 'me122e';
-#main-container[data-mode-circulation='mode-particulier']{
-	#map-container svg{
-		#voie1-particulier, #voie2-particulier, #voie3-particulier{
-		  display:block;
-		}
-		#traficolor-nord g[id*=trafic-vert], #traficolor-nord g[id*=trafic-orange], #traficolor-nord g[id*=trafic-rouge],
-		#traficolor-sud g[id*=trafic-vert], #traficolor-sud g[id*=trafic-orange], #traficolor-sud g[id*=trafic-rouge]{
-		  display:none;
-		}
-	}
-}
 #main-container[data-mode-circulation='m000']{
 	#map-container svg{
 		#voie1-travaux, #voie2-travaux, #voie3-travaux,
 		#echangeur-nord-voie1-croix,#echangeur-nord-voie2-croix,#echangeur-nord-voie3-croix,
 		#echangeur-sud-voie1-croix,#echangeur-sud-voie2-croix,#echangeur-sud-voie3-croix{
 		  display:block;
-		}
-		#traficolor-nord g[id*=trafic-vert], #traficolor-nord g[id*=trafic-orange], #traficolor-nord g[id*=trafic-rouge],
-		#traficolor-sud g[id*=trafic-vert], #traficolor-sud g[id*=trafic-orange], #traficolor-sud g[id*=trafic-rouge]{
-		  display:none;
 		}
 	}
 }
