--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -83,6 +83,21 @@
 
 }
 
+.ds44-expositionHeader-container {
+
+    &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        height: 2em;
+        width: 4rem;
+        background: url(../../../assets/icons/long-arrow-down-white.svg) no-repeat;
+    }
+
+}
+
 .ds44-littleMain {
     min-height: 100vh;
     display: flex;
