--- a/framework/scss/_config/_contextual-variables-grandPatrimoine.scss
+++ b/framework/scss/_config/_contextual-variables-grandPatrimoine.scss
@@ -1,10 +1,10 @@
 /*
-* CD44 Design System - contextual variables for Chateau de Clisson
+* CD44 Design System - contextual variables for Grand Patrimoine
 */
 
 // ----------------
 // ---- COLORS ----
 // ----------------
 
-$ds44-contextual-color : #FF1761 !default;
+$ds44-contextual-color : #aab4be !default;
 $ds44-contextual-hover : lighten($ds44-contextual-color, 10%) !default;
