EVOL differentes icones possibles ds alerte

--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -185,7 +185,7 @@
         padding-left: $ds44-padding-xxlarge;
         display: inline-block;
 
-       .icon-attention {
+       .icon {
           left: 0;
           top: -5px;
           right: inherit;
