EVOL ajout class css util flex wrap pr chiffre cle

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -419,6 +419,10 @@
     flex-direction: row-reverse;
 }
 
+.ds44-flex-wrap {
+    flex-wrap: wrap;
+}
+
 /* Element properties */
 .ds44-fg1 {
     flex-grow: 1;
