--- a/docs/_includes/composants-transverses/sites-applis-patrimoine-noModal.html
+++ b/docs/_includes/composants-transverses/sites-applis-patrimoine-noModal.html
@@ -1,16 +1,16 @@
 <section class="ds44-container-fluid ds44-bgDark ds44-bg-patrimoine-sites ds44--xxl-padding-tb">
-    <header class="txtcenter ds44--xl-padding-b ds44-container-large">
+    <div class="txtcenter ds44--xl-padding-b ds44-container-large">
       <h2 class="h2-like ds44-dark" id="titreCompSiteAplis{% increment my_counter %}">Tous les sites patrimoniaux du Département</h2>
-      <picture>
+      <p role="heading" aria-level="3">
           <img src="../../assets/images/logos/logo-grand-patrimoine-blanc.svg" alt="Grand Patrimoine de Loire-Atlantique" class="ds44-logoCard"/>
-      </picture>
-    </header>
+      </p>
+    </div>
 
     <div class="ds44-mobile-extra-smt">
       {% include carrousel/carrousel-x5.html %}
     </div>
 
     <div class="txtcenter ds44-container-large ">
-      <button class="ds44-btnStd ds44-btnStd--white ds44-btnStd--large ds44-btnFullMobile" type="button" data-target="#overlay-sites-applis" data-js="ds44-modal"><span class="ds44-btnInnerText">Plus de sites encore...</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
+      <p><button class="ds44-btnStd ds44-btnStd--white ds44-btnStd--large ds44-btnFullMobile" type="button" data-target="#overlay-sites-applis" data-js="ds44-modal"><span class="ds44-btnInnerText">Plus de sites encore...</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button></p>
     </div>
 </section>
