--- a/docs/_includes/footer/footer-chateauClisson.html
+++ b/docs/_includes/footer/footer-chateauClisson.html
@@ -16,7 +16,7 @@
                 <p class="ds44-docListElem mtm">
                     <i class="icon icon-directions ds44-docListIco" aria-hidden="true"></i><a href="#" title="Comment se rendre au château de Clisson">Comment s'y rendre ?</a>
                 </p>
-                <p class="ds44-docListElem mtm"><i class="icon icon-time ds44-docListIco" aria-hidden="true"></i>Fermé - ouvre jeudi à 9h</p>
+                <p class="ds44-docListElem mtm"><span class="visually-hidden">Horaires d'ouverture : </span><i class="icon icon-time ds44-docListIco" aria-hidden="true"></i>Fermé - ouvre jeudi à 9h</p>
             </div>
             <div class="col-4-small-1">
                 <p role="heading" aria-level="2" class="h4-like mbs" id="idTitreFooter3">Suivez-nous sur les réseaux sociaux :</p>
