--- a/framework/scss/_libraries/_responsive.scss
+++ b/framework/scss/_libraries/_responsive.scss
@@ -419,6 +419,10 @@
     display: none!important;
   }
 
+  .ds44-show-mobile {
+    display: block!important;
+  }
+
   .ds44-hide-smallScreens {
     display: none !important;
   }
