--- a/docs/_includes/header/inc-header.html
+++ b/docs/_includes/header/inc-header.html
@@ -1,5 +1,5 @@
 <header role="banner" id="topPage">
-    <div class="ds44-blocBandeau ds44-header" {{ include.surcharge-ds }}>
+    <div class="ds44-blocBandeau ds44-header {{ include.header-patrimoine }}" {{ include.surcharge-ds }}>
         <div class="ds44-container-large">
             <ul class="ds44-list ds44-skiplinks">
                 <li><a href="#content" class="ds44-skiplinks--link">Aller au contenu</a></li>
@@ -43,6 +43,10 @@
             <section class="ds44-menuBox" id="menu">
                 <div class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv1" role="dialog" aria-modal="true" aria-label="Menu principal : premier niveau de navigation" id="nav1" aria-hidden="true">
                     <p role="heading" aria-level="1" class="visually-hidden">Menu de navigation</p>
+                    <a href="#" class="ds44-btnOverlay ds44-btnOverlay--language ds44-show-mobile" title="English version : consultez la version anglaise du site Château de Clisson">
+                      <i class="icon icon-english icon--xlarge" aria-hidden="true"></i>
+                      <span class="ds44-btnInnerText--bottom" lang="en">English</span>
+                    </a>
                     <button class="ds44-btnOverlay ds44-btnOverlay--closeOverlay" type="button" aria-label="Fermer le menu de navigation">
                         <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
                     </button>
