--- a/docs/_includes/images/inc-mosaiques_img-X2.html
+++ b/docs/_includes/images/inc-mosaiques_img-X2.html
@@ -1,5 +1,5 @@
 <ul class="grid-2-tiny-1 ds44-mosaique ds44-gutter ds44-list">
-    <li>
+    <li {{ include.surcharge-ds }}>
         {% include images/inc-mosaiques_img-base.html srcImg='src="../../assets/images/img_article_bigger@2x.jpg"' legend="Légende associée © Copyright" %}
     </li>
     <li>
