--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -191,6 +191,7 @@ $ds44-lightgray         : #E6E6E6             !default;
 $ds44-darkgray          : #333                !default;
 $ds44-LA                : #99E6D1             !default;
 $ds44-Agenda            : #FFD883             !default;
+$ds44-dataviz-color     : #ff4a90             !default;
 $ds44-valid             : #24883E             !default;
 $ds44-valid-bg          : #F3F9F5             !default;
 $ds44-warning           : #FFD883             !default;
