--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -758,6 +758,11 @@
     background: linear-gradient(to bottom, $ds44-light-bg 50%, $ds44-light 50%);
 }
 
+// Thematic color dataviz
+.ds44-theme--dataviz {
+    background-color: $ds44-dataviz-color;
+}
+
 // Dégradé du header
 .ds44-alphaGradient {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 30%, rgba(0, 0, 0, .6) 40%, rgba(0, 0, 0, .75) 70%);
