--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -95,7 +95,12 @@ h2, .h2-like {
   }
 
   &.ds44-dark {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, $ds44-contextual-color 80% )!important;
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 80%, $ds44-contextual-color 80% )!important;
+    text-shadow:
+      -1px -1px 0 $ds44-dark,
+      1px -1px 0 $ds44-dark,
+      -1px 1px 0 $ds44-dark,
+      1px 1px 0 $ds44-dark;
   }
 
   &--light {
@@ -110,6 +115,11 @@ h2, .h2-like {
 .ds44-bgDark {
     .h2-like {
       background: linear-gradient(to bottom, rgba(255,255,255,0) 80%,$ds44-contextual-color 80%) !important;
+      text-shadow:
+        -1px -1px 0 $ds44-dark,
+        1px -1px 0 $ds44-dark,
+        -1px 1px 0 $ds44-dark,
+        1px 1px 0 $ds44-dark;
   }
 }
 
