--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -69,6 +69,11 @@
         padding: 0px 10px;
         border-radius: 10px;
         display: inline-block;
+
+        + span {
+          display: block;
+          margin-top: 10px;
+        }
       }
       .ds44-flex-container p {
         font-weight: bold;
