--- a/docs/_includes/footer/footer-multiplesLogos.html
+++ b/docs/_includes/footer/footer-multiplesLogos.html
@@ -2,10 +2,10 @@
     <section class="ds44-container-large ds44--xl-padding-tb">
         <div class="grid-12-small-1 has-gutter-l">
             <div class="col-2-small-1">
-                <picture class="ds44-logo ds44-mb3 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
-                    <img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm" />
-                    <img src="../../assets/images/logos-afnor.png" alt="test logos" class="mbm" />
-                </picture>
+                <ul class="ds44-logo ds44-mb3 ds44-mobile-reduced-mt ds44-mobile-reduced-pt ds44-list ">
+                    <li><img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm" /></li>
+                    <li><img src="../../assets/images/logos-afnor.png" alt="test logos" class="mbm" /></li>
+                </ul>
             </div>
             <div class="col-5-small-1">
                 <h2 class="h4-like" id="idTitreFooter1">Château de Clisson</h2>
