--- a/docs/_includes/modal/inc-mosaique-img.html
+++ b/docs/_includes/modal/inc-mosaique-img.html
@@ -1,8 +1,10 @@
-<section class="ds44-modal-container" id="overlay-mosaique" aria-hidden="true" role="dialog">
+<section class="ds44-modal-container" id="overlay-mosaique" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-test-title">
     <div class="ds44-modal-box">
-        <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boîte d'affichage d'image'" data-js="ds44-modal-action-close">
+        <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boîte de dialogue : [titre de la modale]" data-js="ds44-modal-action-close">
             <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
         </button>
+        <h1 id="overlay-test-title" class="h2-like">Titre de l'overlay</h1>
+        <h1 id="overlay-test-title" class="h2-like visually-hidden" aria-hidden="true">Titre de l'overlay</h1>
         <div class="ds44-modal-gab ds44-mt3 txtcenter">
             <figure class="ds44-legendeContainer ds44-container-imgRatio center">
                 <img src="../../assets/images/img_article_bigger@2x.jpg" alt="" class="ds44-imgRatio">
