--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -109,6 +109,10 @@
     margin-right: $ds44-margin-base;
     width: 150px;
     min-width: max-content;
+
+    img {
+      width: 100%;
+    }
 }
 
 // Chiffres clés
