--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -60,7 +60,7 @@
         text-align: center;
 
         img {
-          max-height: 180px;
+          height: 150px;
         }
       }
       .ds44-chiffreCustom {
