--- a/docs/_includes/footer/footer-chateauClisson.html
+++ b/docs/_includes/footer/footer-chateauClisson.html
@@ -19,6 +19,7 @@
                 <p class="ds44-docListElem mtm"><span class="visually-hidden">Horaires d'ouverture : </span><i class="icon icon-time ds44-docListIco" aria-hidden="true"></i>Fermé - ouvre jeudi à 9h</p>
             </div>
             <div class="col-4-small-1">
+              <div class="ds44--xl-padding-b">
                 <p role="heading" aria-level="2" class="h4-like mbs" id="idTitreFooter3">Suivez-nous sur les réseaux sociaux :</p>
                 <ul class="ds44-list ds44-flex-container ds44-flex-tablette-center">
                     <li>
@@ -34,6 +35,33 @@
                         <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Youtube</span></a>
                     </li>
                 </ul>
+              </div>
+              <div>
+                <p role="heading" aria-level="2" class="h4-like mbs" id="idTitreFooter4">Le château de Clisson est labellisé :</p>
+                <ul class="ds44-list ds44-flex-container ds44-flex-tablette-center">
+                    <li>
+                        <a href="#" target="_blank" class="" title="Le château de Clisson est labellisé Monument Historique - nouvelle fenêtre">
+                          <picture class="ds44-logo--label ds44-mb2 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
+                              <img src="../../assets/images/logos/footer/logo_monument_historique.jpg" alt="Le château de Clisson est labellisé Monument Historique" />
+                          </picture>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" class="" title="Le château de Clisson est labellisé Qualité Tourisme - nouvelle fenêtre">
+                          <picture class="ds44-logo--label ds44-mb2 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
+                              <img src="../../assets/images/logos/footer/logo_qualite_tourisme.jpg" alt="Le château de Clisson est labellisé Qualité Tourisme" />
+                          </picture>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" class="" title="Le château de Clisson est labellisé Vignobles et Découvertes - nouvelle fenêtre">
+                          <picture class="ds44-logo--label ds44-mb2 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
+                              <img src="../../assets/images/logos/footer/logo_vignobles-et-decouvert.jpg" alt="Le château de Clisson est labellisé Vignobles et Découvertes" />
+                          </picture>
+                        </a>
+                    </li>
+                </ul>
+              </div>
             </div>
         </div>
     </section>
