--- a/framework/scss/components/_footer.scss
+++ b/framework/scss/components/_footer.scss
@@ -36,6 +36,12 @@ footer .ds44-logo {
     width: 122px;
 }
 
+footer .ds44-logo--label {
+    width: 75px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
 .ds44-icoLink--footer {
     margin-right: 1rem;
     margin-bottom: 9rem;
