--- a/docs/_includes/footer/footer-archive.html
+++ b/docs/_includes/footer/footer-archive.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-3-small-1 ds44-mb3">
                 <h2 class="h4-like" id="idTitreFooter2">Recevez nos infos</h2>
-                <p class="ds44-mb-std ds44-mobile-reduced-mb">Pour recevoir nos poublications et nos actualités</p>
+                <p class="ds44-mb-std ds44-mobile-reduced-mb">Pour recevoir nos publications et nos actualités</p>
                 <button class="ds44-btnStd ds44-mobile-reduced-mb" type="button" title="Je m'abonne par mail aux informations des Archives départementales">
                     <span class="ds44-btnInnerText">Je m'abonne</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i>
                 </button>
