Evol style pour lien "anglais" menu
Diminution de la marge haute en mode mobile.
Ce style n'est utilisé que pour le bouton "anglais" dans le menu.

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -1194,6 +1194,9 @@ h6.visually-hidden + * {
     .ds44-xl-gap {
         column-gap: 5rem;
     }
+    .ds44-posTopCont {
+        top: $ds44-margin-base;
+    }
 
 }
 
