--- a/docs/_includes/carrousel/carrousel-photos.html
+++ b/docs/_includes/carrousel/carrousel-photos.html
@@ -1,9 +1,9 @@
 <div class="swipper-carousel-wrap swipper-carousel-slideshow" data-nb-visible-slides="1">
     <div class="swiper-container">
         {% if include.titreCarrousel %}
-        <p role="heading" aria-level="1" class="h1-like ds44-text--colorInvert">
+        <h4 class="h4-like">
             {{ include.titreCarrousel }}
-        </p>
+        </h4>
         {% endif %}
         <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark" type="button">
             <i class="icon icon-pause" aria-hidden="true"></i>
@@ -29,11 +29,11 @@
                 title="2013/29 - Titre vignette 4" legend="Antoine Parra Del Pozo, 2013" %}
             </li>
         </ul>
-        <button class="swiper-button-prev swiper-button-white swiper-button-disabled" type="button">
+        <button class="swiper-button-prev swiper-button-white swiper-button-disabled ds44-bgDark" type="button">
             <i class="icon icon-left" aria-hidden="true"></i>
             <span class="visually-hidden"></span>
         </button>
-        <button class="swiper-button-next swiper-button-white swiper-button-disabled" type="button">
+        <button class="swiper-button-next swiper-button-white swiper-button-disabled ds44-bgDark" type="button">
             <i class="icon icon-right" aria-hidden="true"></i>
             <span class="visually-hidden"></span>
         </button>
@@ -41,7 +41,7 @@
     <div class="swiper-pagination"></div>
     <div class="swiper-thumbs">
         <div class="swiper-thumbs-container">
-            <nav class="swiper-container">
+            <nav class="swiper-container" aria-label="Navigation au sein des vignettes - {{ include.titreCarrousel }}">
                 <ul class="swiper-wrapper ds44-list">
                     <li class="swiper-slide">
                         {% include carrousel/diaporama/diaporama-thumb.html
