--- a/docs/_includes/footer/footer-chateauClisson.html
+++ b/docs/_includes/footer/footer-chateauClisson.html
@@ -42,21 +42,21 @@
                     <li>
                         <a href="#" target="_blank" class="" title="Le château de Clisson est labellisé Monument Historique - nouvelle fenêtre">
                           <picture class="ds44-logo--label ds44-mb2 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
-                              <img src="../../assets/images/logos/footer/logo_monument_historique.jpg" alt="Le château de Clisson est labellisé Monument Historique" />
+                              <img src="../../assets/images/logos/footer/logo_monument_historique.svg" alt="Le château de Clisson est labellisé Monument Historique" />
                           </picture>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank" class="" title="Le château de Clisson est labellisé Qualité Tourisme - nouvelle fenêtre">
                           <picture class="ds44-logo--label ds44-mb2 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
-                              <img src="../../assets/images/logos/footer/logo_qualite_tourisme.jpg" alt="Le château de Clisson est labellisé Qualité Tourisme" />
+                              <img src="../../assets/images/logos/footer/logo_qualite_tourisme.svg" alt="Le château de Clisson est labellisé Qualité Tourisme" />
                           </picture>
                         </a>
                     </li>
                     <li>
                         <a href="#" target="_blank" class="" title="Le château de Clisson est labellisé Vignobles et Découvertes - nouvelle fenêtre">
                           <picture class="ds44-logo--label ds44-mb2 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
-                              <img src="../../assets/images/logos/footer/logo_vignobles-et-decouvert.jpg" alt="Le château de Clisson est labellisé Vignobles et Découvertes" />
+                              <img src="../../assets/images/logos/footer/logo_vignobles-et-decouvert.svg" alt="Le château de Clisson est labellisé Vignobles et Découvertes" />
                           </picture>
                         </a>
                     </li>
