--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -61,6 +61,8 @@
 
         img {
           height: 150px;
+          width: 100%;
+          display: block;
         }
       }
       .ds44-chiffreCustom {
