--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -46,6 +46,10 @@
         color: $ds44-color-inverse;
     }
 
+    .wysiwyg p a {
+      color: $ds44-color-inverse;
+    }
+
     .ds44-wsg-encadreApplat {
         color: $ds44-color-base;
 
